[gd_scene load_steps=8 format=3 uid="uid://dctq12uh5gbmm"]

[ext_resource type="Script" path="res://scripts/pin/pin_ui.gd" id="1_8oveg"]
[ext_resource type="Texture2D" uid="uid://dbtntdpvv4vy7" path="res://assets/images/pin.png" id="2_ocr7n"]
[ext_resource type="Script" uid="uid://c443fohj4k1oq" path="res://scripts/ui/pin/input_manager.gd" id="3_wcwu7"]
[ext_resource type="Script" uid="uid://cx7nqwxb0ejym" path="res://scripts/ui/pin/popup_menu.gd" id="4_ss5bw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5y18g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oveg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocr7n"]
content_margin_right = 6.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Pin" type="MarginContainer" node_paths=PackedStringArray("button_gui") groups=["pin"]]
custom_minimum_size = Vector2(24, 24)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 6
script = ExtResource("1_8oveg")
button_gui = NodePath("CheckButton")
pin_color = Color(0.67, 0.2948, 0.2948, 1)

[node name="CheckButton" type="CheckButton" parent="."]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5y18g")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_8oveg")
theme_override_styles/normal = SubResource("StyleBoxFlat_ocr7n")
theme_override_icons/checked = ExtResource("2_ocr7n")
theme_override_icons/unchecked = ExtResource("2_ocr7n")
theme_override_icons/checked_disabled = ExtResource("2_ocr7n")
theme_override_icons/unchecked_disabled = ExtResource("2_ocr7n")
theme_override_icons/checked_mirrored = ExtResource("2_ocr7n")
theme_override_icons/unchecked_mirrored = ExtResource("2_ocr7n")
theme_override_icons/checked_disabled_mirrored = ExtResource("2_ocr7n")
theme_override_icons/unchecked_disabled_mirrored = ExtResource("2_ocr7n")
alignment = 1

[node name="input_manager" type="Node2D" parent="."]
process_mode = 4
visible = false
script = ExtResource("3_wcwu7")

[node name="PopupMenu" type="PopupMenu" parent="input_manager"]
process_mode = 4
size = Vector2i(20, 8)
allow_search = false
script = ExtResource("4_ss5bw")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="renamed" from="." to="." method="_on_renamed"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exited"]
[connection signal="mouse_entered" from="CheckButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CheckButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="CheckButton" to="." method="_on_pressed"]
[connection signal="id_pressed" from="input_manager/PopupMenu" to="input_manager/PopupMenu" method="_on_id_pressed"]
